[package]
name = "meadow"
version = "0.1.0"
authors = ["waldemar <waldemar@wdmsys.com>"]

[dependencies]
log = "0.4"
flexi_logger = "0.9"
chrono = "0.4"

[dependencies.clap]
version = "2"
#  no "wrap_help" from default dependencies but "suggestions" and "color" are ok
default-features = false
features = [ "suggestions", "color" ]
